# standalone-gdal-drivers

./: .gitmodules  CONTRIBUTING.md  README.md
standalone-gdal-drivers/: .gitignore  CMakeLists.txt
standalone-gdal-drivers/src/standalone-gdal-drivers/: CMakeLists.txt  standalone-gdal-drivers.cpp
